Tests restantes de backend implementados y corregidos, continuacion de refactorización, v2 diagrama dominio, test frontend, etc